--- a/package.json
+++ b/package.json
@@ -1,112 +1,112 @@
 {
-    "name": "@devtron-labs/devtron-fe-common-lib",
-    "version": "0.1.11",
-    "description": "Supporting common component library",
-    "type": "module",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/devtron-labs/devtron-fe-common-lib.git"
+  "name": "@wolfgang1219/devtron-fe-common-lib",
+  "version": "0.1.11",
+  "description": "Supporting common component library",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devtron-labs/devtron-fe-common-lib.git"
+  },
+  "author": "Devtron",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/devtron-labs/devtron-fe-common-lib/issues"
+  },
+  "homepage": "https://github.com/devtron-labs/devtron-fe-common-lib#readme",
+  "sideEffects": [
+    "**/*.css"
+  ],
+  "scripts": {
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {}\"",
+    "lint": "tsc --noEmit && NODE_OPTIONS=--max_old_space_size=8192 eslint 'src/**/*.{js,jsx,ts,tsx}' --max-warnings 0",
+    "lint-fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+    "test": "exit 0",
+    "dev": "NODE_OPTIONS=--max_old_space_size=8192 vite",
+    "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build --sourcemap",
+    "build-watch": "NODE_OPTIONS=--max_old_space_size=8192 vite build --sourcemap --watch",
+    "build-lib": "vite build",
+    "preview": "vite preview",
+    "lint-staged": "lint-staged"
+  },
+  "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "0.2.3",
+    "@sentry/browser": "^7.31.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@tippyjs/react": "^4.2.0",
+    "@typeform/embed-react": "2.20.0",
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.13",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "glob": "^10.3.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.5.0",
+    "moment": "^2.29.4",
+    "monaco-editor": "0.44.0",
+    "monaco-yaml": "5.1.1",
+    "prettier": "^3.1.1",
+    "react-ga4": "^1.4.1",
+    "react-mde": "^11.5.0",
+    "react-toastify": "^8.2.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.5.3",
+    "vite-plugin-dts": "^3.5.1",
+    "vite-plugin-lib-inject-css": "^1.2.0",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.3.2"
+  },
+  "peerDependencies": {
+    "react-select": "5.8.0",
+    "@rjsf/core": "^5.13.3",
+    "@rjsf/utils": "^5.13.3",
+    "@rjsf/validator-ajv8": "^5.13.3",
+    "@typeform/embed-react": "2.20.0",
+    "dompurify": "^3.0.2",
+    "marked": "4.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
+    "react-ga4": "^1.4.1",
+    "react-mde": "^11.5.0",
+    "react-router": "^5.3.0",
+    "react-router-dom": "^5.3.0",
+    "rxjs": "^7.8.1",
+    "yaml": "^2.4.1"
+  },
+  "dependencies": {
+    "@types/react-dates": "^21.8.6",
+    "ansi_up": "^5.2.1",
+    "fast-json-patch": "^3.1.1",
+    "react-dates": "^21.8.0",
+    "jsonpath-plus": "^9.0.0",
+    "react-monaco-editor": "^0.54.0",
+    "sass": "^1.69.7",
+    "tslib": "^2.4.1"
+  },
+  "overrides": {
+    "react-dates": {
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2"
     },
-    "author": "Devtron",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/devtron-labs/devtron-fe-common-lib/issues"
-    },
-    "homepage": "https://github.com/devtron-labs/devtron-fe-common-lib#readme",
-    "sideEffects": [
-        "**/*.css"
-    ],
-    "scripts": {
-        "prepare": "node -e \"try { require('husky').install() } catch (e) {}\"",
-        "lint": "tsc --noEmit && NODE_OPTIONS=--max_old_space_size=8192 eslint 'src/**/*.{js,jsx,ts,tsx}' --max-warnings 0",
-        "lint-fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-        "test": "exit 0",
-        "dev": "NODE_OPTIONS=--max_old_space_size=8192 vite",
-        "build": "NODE_OPTIONS=--max_old_space_size=8192 vite build --sourcemap",
-        "build-watch": "NODE_OPTIONS=--max_old_space_size=8192 vite build --sourcemap --watch",
-        "build-lib": "vite build",
-        "preview": "vite preview",
-        "lint-staged": "lint-staged"
-    },
-    "devDependencies": {
-        "@esbuild-plugins/node-globals-polyfill": "0.2.3",
-        "@sentry/browser": "^7.31.1",
-        "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^12.1.4",
-        "@tippyjs/react": "^4.2.0",
-        "@typeform/embed-react": "2.20.0",
-        "@types/react": "17.0.39",
-        "@types/react-dom": "17.0.13",
-        "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^6.17.0",
-        "@typescript-eslint/parser": "^6.17.0",
-        "@vitejs/plugin-react": "^4.0.3",
-        "eslint": "^8.56.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jsx-a11y": "^6.8.0",
-        "eslint-plugin-prettier": "^5.1.2",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "glob": "^10.3.3",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.5.0",
-        "moment": "^2.29.4",
-        "monaco-editor": "0.44.0",
-        "monaco-yaml": "5.1.1",
-        "prettier": "^3.1.1",
-        "react-ga4": "^1.4.1",
-        "react-mde": "^11.5.0",
-        "react-toastify": "^8.2.0",
-        "typescript": "^4.9.4",
-        "vite": "^4.5.3",
-        "vite-plugin-dts": "^3.5.1",
-        "vite-plugin-lib-inject-css": "^1.2.0",
-        "vite-plugin-svgr": "^2.4.0",
-        "vite-tsconfig-paths": "^4.3.2"
-    },
-    "peerDependencies": {
-        "react-select": "5.8.0",
-        "@rjsf/core": "^5.13.3",
-        "@rjsf/utils": "^5.13.3",
-        "@rjsf/validator-ajv8": "^5.13.3",
-        "@typeform/embed-react": "2.20.0",
-        "dompurify": "^3.0.2",
-        "marked": "4.3.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-draggable": "^4.4.5",
-        "react-ga4": "^1.4.1",
-        "react-mde": "^11.5.0",
-        "react-router": "^5.3.0",
-        "react-router-dom": "^5.3.0",
-        "rxjs": "^7.8.1",
-        "yaml": "^2.4.1"
-    },
-    "dependencies": {
-        "@types/react-dates": "^21.8.6",
-        "ansi_up": "^5.2.1",
-        "fast-json-patch": "^3.1.1",
-        "react-dates": "^21.8.0",
-        "jsonpath-plus": "^9.0.0",
-        "react-monaco-editor": "^0.54.0",
-        "sass": "^1.69.7",
-        "tslib": "^2.4.1"
-    },
-    "overrides": {
-        "react-dates": {
-            "react": "^17.0.2",
-            "react-dom": "^17.0.2"
-        },
-        "react-monaco-editor": {
-            "monaco-editor": "0.44.0"
-        }
+    "react-monaco-editor": {
+      "monaco-editor": "0.44.0"
     }
+  }
 }
